--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         <div class="home-content">
                             <h1 class="Name">I'm Bhernie Albior</h1>
                             <p class="intro">This is my official first Portfolio webpage<br> and I'm constantly learning how to improve my work.</p>
-                            <div class="SC"><a href="#">Download Source Code</a></div>
+                            <div class="SC"><a href="https://github.com/BerunDia/MyFirstPersonalwebpage">Download Source Code</a></div>
                             <div class="scroll"><a href="#navigation"><i class="fa fa-angle-up"></i></a></div>
                             <div class="bimage">
                                 <img src="https://drive.google.com/uc?export=view&id=13X4xGzY__M93UNY1HogT5I2GXEuKWQI_" class="sung">
