--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                           <!--text--->
                           <div class="blog-text">
                             <span>Sep 19,2021</span>
-                            <a href="#" class="blog-title">If I will become a computer parts/ gadget or any ICT tool, what will you be and why?</a>
+                            <a href="https://202110039.wixsite.com/website/post/activity-title-activity-quiz-module-1" class="blog-title">If I will become a computer parts/ gadget or any ICT tool, what will you be and why?</a>
                             <p>If I will become a computer parts/ gadget or any ICT tool, what will you be and eye? I would like to be a Monitor why? The Monitor is the...</p>
                             <a href="https://202110039.wixsite.com/website/post/activity-title-activity-quiz-module-1">Read More</a>
                           </div>
@@ -123,7 +123,7 @@
                           <!--text--->
                           <div class="blog-text">
                             <span>Sep 11,2021</span>
-                            <a href="#" class="blog-title">Let's Go Find out what is Software all about</a>
+                            <a href="https://202110039.wixsite.com/website/post/assignment-2-let-s-go-find-out-what-is-software-all-about" class="blog-title">Let's Go Find out what is Software all about</a>
                             <p>Do you know that there are two categories of software licenses? This are the application software and system software ,what are they on...</p>
                             <a href="https://202110039.wixsite.com/website/post/assignment-2-let-s-go-find-out-what-is-software-all-about">Read More</a>
                           </div>
